--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 
   <body>
     <header id="header">
-      <div  class="title">
-    <img class="video" id="header-img" src="https://www.freeiconspng.com/thumbs/guitar-icon-png/guitar-icon-png-24.png" alt="Company Logo" width="44px" height="44px">
-      <h1>GOODNESS</h1>
-      </div>
       <nav id="nav-bar">
-        <ul>
+      <ul>
+        <div  class="title">
+        <img class="video" id="header-img" src="https://www.freeiconspng.com/thumbs/guitar-icon-png/guitar-icon-png-24.png" alt="Company Logo" width="44px" height="44px">
+      <h1>GOODNESS</h1>
+      </div >
   <li >
     <a class="nav-link" href="#features" accesskey="s">Features</a>
   </li>
@@ -52,7 +52,7 @@
 
     <section class="tute" role="region" aria-labelledby="tutorial"> 
     <h1 id="tutorial"><br/><br/><br/></h1>
-<iframe id="video" width="500" height="300" src="https://www.youtube.com/embed/rTMN8rCBWkw" frameborder="0" allowfullscreen></iframe>
+<iframe id="video"  src="https://www.youtube.com/embed/rTMN8rCBWkw" frameborder="0" allowfullscreen></iframe>
   </section>
 
   <section class="price" role="region" aria-labelledby="pricing"> 
