--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <a id="top"></a>
 <div class="page">
   
-    <form id="form" method="post" action="https://www.freecodecamp.com/email-submit">
+    <form id="form" method="post" action=" ">
     <h3>Discover Handcrafted Excellence</h3>
             <input name="email" id="email" type="email" placeholder="Enter your email address"><br>
             <input name="submit" id="submit" type="submit" value="GET STARTED">
